--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/loconluis/weather-app#readme",
   "dependencies": {
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "yargs": "^9.0.1"
   },
   "devDependencies": {
     "standard": "^10.0.3"
